# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/: cli.py  even.py  games_launcher.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_games.py  launch_calc.py  launch_even.py  launch_gcd.py  launch_prime.py  launch_progression.py
brain_games/scripts/games/: brain_calc.py  brain_gcd.py
